Follow-up from "volume: support arbitrarily-large positive gains"
The following discussion from !5063 (merged) should be addressed:
-
@thiblahute started a discussion: (+1 comment) That is an API break and application like Pitivi where we use direct ControlBinding to keyframe the volume property break badly with that change. Also all the
.xges
out there are broken with that change. I am not sure what would be the right solution but changing the range that way doesn't sound right to me.cc @slomo